# corsac

./: CMakeLists.txt  README.md  corsac.cpp
lib/: CMakeLists.txt  lib.hh
lib/include/corsac_lib/: basic_includes.hh  exception.hh  general.hh  lib.hh  mem.hh  misc.hh  obj.hh  predefs.hh  prelude.hh
lib/include/corsac_lib/mem/: env.hh  memory.hh  package.hh  thread_memory.hh
lib/src/: exception.cpp  general.cpp  misc.cpp
lib/src/mem/: env.cpp  memory.cpp  package.cpp  thread_memory.cpp
