cmake_minimum_required(VERSION 3.21)
set(CMAKE_C_COMPILER "/usr/bin/gcc-12")
set(CMAKE_CXX_COMPILER "/usr/bin/g++-12")
project(corsac)
add_subdirectory(lib)
add_executable(corsac corsac.cpp)
include_directories(lib/include)
target_compile_options(corsac_lib PRIVATE -std=c++20)
target_link_libraries(corsac corsac_lib)